react router NavLink

--- a/react_staging/public/index.html
+++ b/react_staging/public/index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link rel="stylesheet" href="/css/bootstrap.css">
 		<style>
-			.atguigu{
+			.yzk{
 				background-color: rgb(209, 137, 4) !important;
 				color: white !important;
 			}
